<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="btnJugar">Let\'s play!</string>
    <string name="btnSalir">Exit</string>
    <string name="btnVolver">Back</string>
    <string name="rbAzul">Blue</string>
    <string name="rbNaranja">Orange</string>
    <string name="rbVerde">Green</string>
    <string name="txtJugador1">Player 1 - Enter your name and choose your color</string>
    <string name="txtJugador2">Player 2 - Enter your name and choose your color</string>
    <string name="txtTurno">%1$s \'s turn</string>
    <string name="toastTrampa">Don\'t cheat!</string>
    <string name="toastEmpate"> Draw!</string>
    <string name="toastVictoria"> The winner is %1$s!</string>
    <string name="partidaGuardada"> %1$s vs %2$s,%3$s</string>
    <string name="listaGanadores">List of Winners</string>
    <string name="textoIdiomas">Language</string>
    <string name="textoAlmacenamiento">Storage</string>
    <string name="preferencias">Preferences</string>
    <string name="textoInterno">Internal Storage</string>
    <string name="textoExterno">External Storage(SD Card)</string>
    <string name="guardarPreferencias">Save Preferences</string>
    <string name="nombreFichero">Name of file to save</string>
    <string name="jugar">Play</string>
</resources>
