<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.garcia.mario.tresenraya.Configuracion_Activity">


    <TextView
        android:text="@string/txtJugador1"
        android:layout_height="wrap_content"
        android:id="@+id/txtJugador1"
        tools:ignore="HardcodedText"
        android:layout_width="250dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnJugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="on_btnJugar_pulsado"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rgJugador1"
        android:layout_alignTop="@+id/eTxtJugador1"
        android:layout_alignStart="@+id/eTxtJugador1">


        <RadioButton
            android:text="@string/rbNaranja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbNaranjaJugador1"
            tools:ignore="ObsoleteLayoutParam"
            android:onClick="on_radiobutton_pulsado"
            android:checked="true"
            android:buttonTint="@color/naranja"
            android:textColor="@color/naranja"
            android:layout_marginTop="47dp"
            android:layout_below="@+id/eTxtJugador2"
            android:layout_toEndOf="@+id/btnVolver" />

        <RadioButton
            android:text="@string/rbVerde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rbNaranjaJugador1"
            android:layout_alignStart="@+id/rgJugador1"
            android:layout_marginTop="17dp"
            android:id="@+id/rbVerdeJugador1"
            tools:ignore="ObsoleteLayoutParam"
            android:onClick="on_radiobutton_pulsado"
            android:enabled="false"
            android:buttonTint="@color/verde"
            android:textColor="@color/verde"/>

        <RadioButton
            android:text="@string/rbAzul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/rbAzulJugador1"
            android:onClick="on_radiobutton_pulsado"
            android:buttonTint="@color/azul"
            android:textColor="@color/azul"/>
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/eTxtJugador1"
        android:layout_marginStart="19dp"
        tools:ignore="LabelFor"
        android:maxLength="7"
        android:minWidth="7dp"
        android:ems="6"
        android:layout_below="@+id/txtJugador1"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnVolver"
        android:onClick="volver"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/eTxtJugador1" />

    <TextView
        android:text="@string/txtJugador2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtJugador2"
        tools:ignore="HardcodedText"
        android:layout_below="@+id/rgJugador1"
        android:layout_alignStart="@+id/rgJugador1" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rgJugador2"
        android:layout_above="@+id/btnVolver"
        android:layout_alignStart="@+id/txtJugador2"
        android:layout_marginBottom="11dp">

        <RadioButton
            android:text="@string/rbNaranja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/eTxtJugador2"
            android:layout_marginTop="24dp"
            android:id="@+id/rbNaranjaJugador2"
            tools:ignore="ObsoleteLayoutParam"
            android:onClick="on_radiobutton_pulsado"
            android:enabled="false"
            android:buttonTint="@color/naranja"
            android:textColor="@color/naranja"/>

        <RadioButton
            android:text="@string/rbVerde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rbNaranjaJugador2"
            android:layout_alignStart="@+id/rbNaranjaJugador2"
            android:layout_marginTop="14dp"
            android:id="@+id/rbVerdeJugador2"
            tools:ignore="ObsoleteLayoutParam"
            android:onClick="on_radiobutton_pulsado"
            android:checked="true"
            android:buttonTint="@color/verde"
            android:textColor="@color/verde"/>

        <RadioButton
            android:text="@string/rbAzul"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_below="@+id/rbVerdeJugador2"
            android:layout_alignStart="@+id/rbVerdeJugador2"
            android:layout_marginTop="11dp"
            android:id="@+id/rbAzulJugador2"
            tools:ignore="ObsoleteLayoutParam"
            android:onClick="on_radiobutton_pulsado"
            android:buttonTint="@color/azul"
            android:textColor="@color/azul"/>
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="6"
        android:id="@+id/eTxtJugador2"
        tools:ignore="LabelFor"
        android:maxLength="7"
        android:layout_below="@+id/txtJugador2"
        android:layout_alignStart="@+id/rgJugador2" />


</RelativeLayout>
