<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_juego"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.garcia.mario.Activities.com.islasf.MarioSamael.Activities.Juego_Activity">


    <TextView
        android:text="@string/txtTurno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:id="@+id/txtTurno" />

    <Button
        android:text="@string/btnSalir"
        android:layout_height="wrap_content"
        android:id="@+id/btnSalir"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="finalizarPrograma"
        android:layout_width="150dp" />

    <Button
        android:text="@string/btnVolver"
        android:layout_height="wrap_content"
        android:id="@+id/btnVolver"
        tools:ignore="UnknownId"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="volver"
        android:layout_width="150dp" />

    <GridLayout
        android:rowCount="3"
        android:columnCount="3"
        android:background="@color/colorPrimaryDark"
        android:layout_width="338dp"
        android:layout_height="334dp"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/btnSalir"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btn1"
            android:onClick="onBtnPulsado"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginTop="-6dp" />

        <Button
            android:id="@+id/btn2"
            android:onClick="onBtnPulsado"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginTop="-6dp" />

        <Button
            android:id="@+id/btn3"
            android:onClick="onBtnPulsado"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginTop="-6dp" />

        <Button
            android:id="@+id/btn4"
            android:onClick="onBtnPulsado"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginLeft="-4dp" />

        <Button
            android:id="@+id/btn5"
            android:onClick="onBtnPulsado"
            android:layout_width="115dp"
            android:layout_height="115dp" />

        <Button
            android:id="@+id/btn6"
            android:onClick="onBtnPulsado"
            android:layout_width="115dp"
            android:layout_height="115dp" />

        <Button
            android:id="@+id/btn7"
            android:onClick="onBtnPulsado"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginLeft="-4dp" />

        <Button
            android:id="@+id/btn8"
            android:onClick="onBtnPulsado"
            android:layout_width="115dp"
            android:layout_height="115dp" />
        <Button
            android:id="@+id/btn9"
            android:onClick="onBtnPulsado"
            android:layout_width="115dp"
            android:layout_height="115dp" />


    </GridLayout>


</RelativeLayout>
